# Name-Day-Announcer

./: CMakeLists.txt  README.md  SSSVT_Ulohy_Pole_04.sln
SSSVT_Ulohy_Pole_04/: NameDay.cpp  NameDay.h  Name_Day_Announcer.cpp  SSSVT_Ulohy_Pole_04.cpp  SSSVT_Ulohy_Pole_04.vcxproj  SSSVT_Ulohy_Pole_04.vcxproj.filters  icon.rc
SSSVT_Ulohy_Pole_04/utilities/: utilities.cpp  utilities.h
enc_temp_folder/730a714b580644cd5d5d2ff52df6c9e/: SSSVT_Ulohy_Pole_04.cpp
enc_temp_folder/c0f8c33b468167e3ef3898ff7dee74c/: SSSVT_Ulohy_Pole_04.cpp
enc_temp_folder/d5f39565c957c9e8a6c3e70ccf2b1d0/: SSSVT_Ulohy_Pole_04.cpp
